# mindguard-benchmark

./: .gitignore  LICENSE  README.md  pyproject.toml
analysis/: failure_analysis.ipynb  visualization.py
baselines/: gpt4_baseline.jsonl  human_counselor_responses.jsonl
data/: dspec_1200_public.jsonl  generate_full_dataset.py  gold_labels.jsonl  paraphrase_clusters.json  private_holdout_meta.json
docs/: annotation_guidelines.md  benchmark_card.md  index.html  usage_tutorial.ipynb
eval/: __init__.py  automated_classifier.py  evaluate_model.py  metrics.py
