[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mindguard-benchmark"
version = "1.0.0"
description = "MindGuard: A Benchmark for Evaluating Safety Calibration in Mental Health AI"
readme = "README.md"
license = {text = "CC-BY-NC-4.0"}
requires-python = ">=3.9"
authors = [
    {name = "MindGuard Team"}
]
keywords = [
    "benchmark",
    "mental-health",
    "ai-safety",
    "evaluation",
    "nlp"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "jsonlines>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]
api = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
    "httpx>=0.25.0",
]

[project.scripts]
mindguard-eval = "eval.evaluate_model:main"

[project.urls]
Homepage = "https://github.com/mindguard-benchmark/mindguard"
Documentation = "https://mindguard-benchmark.org/docs"
Repository = "https://github.com/mindguard-benchmark/mindguard"
Issues = "https://github.com/mindguard-benchmark/mindguard/issues"

[tool.setuptools.packages.find]
include = ["eval*", "analysis*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
